--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
+body {
+  background-color: #2998ff;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex: 1;
+  margin: auto;
+  width: 500px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.App > div.row {
+  display: flex;
+}
+.App > div.row > div {
+  display: flex;
+  flex: 1;
+  padding: 1rem;
+  background-color: #737373;
   color: white;
+  justify-content: center;
+  border: 4px solid white;
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.App > div.row > div.output {
+  background-color: #7b574a;
+  height: 40px;
+  justify-content: flex-start;
+  display: flex;
+  align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App > div.row > div.operand {
+  background-color: #ff8d00;
 }
